--- a/protogeni/lib/GeniCredential.pm.in
+++ b/protogeni/lib/GeniCredential.pm.in
@@ -220,7 +220,9 @@ sub CreateFromSigned($$;$)
     my ($cap_node) = $doc->getElementsByTagName("privileges");
     return undef
 	if (!defined($cap_node));
-    my $capabilities = XMLin($cap_node->toString(), ForceArray => 0);
+    my $rawcapabilities = XMLin($cap_node->toString(),
+				ForceArray => [ "privilege" ] );
+    my $capabilities = $rawcapabilities->{ "privilege" };
 
     # Dig out the extensions
     my ($extensions_node) = $doc->getElementsByTagName("extensions");
