Give out the IP address of the control interface of the physical node.

--- a/protogeni/lib/GeniCM.pm.in
+++ b/protogeni/lib/GeniCM.pm.in
@@ -133,6 +133,8 @@ sub Resolve($)
 		     "uuid"         => $node->uuid(),
 		     "role"	    => $node->role(),
 		     "hostname"     => $node->node_id() . ".${OURDOMAIN}",
+		     "physctrl"     => 
+			 Interface->LookupControl( $node->phys_nodeid() )->IP(),
 		   };
 
 	#
